# RustPlay

./: Cargo.toml  README.md
cargo-play/: Cargo.toml
cargo-play/src/: cargo_command_builder.rs  infer.rs  lib.rs  project.rs  project_builder.rs
cargo-player/: Cargo.toml
cargo-player/benches/: infer.rs
cargo-player/src/: infer.rs  project.rs
egui_dock/: Cargo.toml
egui_dock/src/: lib.rs  style.rs  tree.rs
patches/egui_dock/: context_menu.patch
rust-play/: Cargo.toml  build.rs
rust-play/src/: custom_frame.rs  dwm_win32.rs  main.rs  panic.rs  popup.rs  widgets.rs  win_version.rs
rust-play/src/config/: config.rs  dock.rs  github.rs  mod.rs  terminal.rs  theme.rs
rust-play/src/os/: windows.rs
rust-play/src/os/windows/: custom_frame.rs  dwm_win32.rs  init.rs
rust-play/src/utils/: ansi_parser.rs  data.rs  mod.rs
rust-play/src/widgets/: code_editor.rs  dock.rs  mod.rs  terminal.rs  titlebar.rs
