[package]
name = "cargo-player"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"
syn = { version = "1.0.107", features = ["full"] }
crates-index = "0.19.1"
once_cell = "1.17.0"

[dev-dependencies]
criterion = "0.4"
iai = "0.1.1"

[[bench]]
name = "infer"
harness = false
