[package]
name = "egui_dock"
description = "Docking support for `egui` - an immediate-mode GUI library for Rust"
authors = ["lain-dono", "Adam Gąsior (Adanos020)"]
version = "0.3.1"
edition = "2021"
rust-version = "1.65"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Adanos020/egui_dock"
categories = ["gui", "game-development"]
include = ["src/*.rs", "Cargo.toml", "LICENSE"]

[features]
default = []

# Enable serialization of `Tree`.
serde = ["dep:serde", "egui/serde"]

[dependencies]
egui = "0.20.1"
serde = { version = "1.0.152", optional = true, features = ["derive"] }

[dev-dependencies]
eframe = "0.20.1"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]
