[package]
name = "rust-play"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Cherry"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"

[dependencies]
egui_dock = { version = "0.3.1", features = ["serde"] }
egui = "0.20.1"
eframe = "0.20.1"
regex = "1.7.0"
tracing-subscriber = "0.3.16"
once_cell = "1.16.0"
lazy_static = "1.4.0"
windows-dll = "0.4.1"
smallvec = { version = "1.10.0", features=["const_generics"] }
serde = "1.0.152"
toml = "0.5.10"
reqwest = { version = "0.11.13", features = ["blocking"] }
thiserror = "1.0.38"
serde_json = "1.0.91"
resvg = "0.28.0"
paste = "1.0.11"
syntect = "5.0.0"
cargo-play = { path = "../cargo-play" }

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "UI_Composition",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_HiDpi",
]
